@@ -9,18 +9,15 @@
         // Add the blog description (tagline) for the home/front page.
         $site_tagline = get_bloginfo( 'description', 'display' );
         if ( $site_tagline && ( is_home() || is_front_page() ) )
-          echo " | $site_tagline";
+            echo " | $site_tagline";
 
         // Add a page number if necessary:
         if ( $paged >= 2 || $page >= 2 )
-          echo ' | ' . sprintf( __( 'Page %s', 'desk-mess-mirrored' ), max( $paged, $page ) ); ?>
+            echo ' | ' . sprintf( __( 'Page %s', 'desk-mess-mirrored' ), max( $paged, $page ) ); ?>
     </title>
-
 	<link rel="stylesheet" href="<?php bloginfo( 'stylesheet_url' ); ?>" type="text/css" media="screen" />
 	<link rel="pingback" href="<?php bloginfo( 'pingback_url' ); ?>" />
-
-	<?php if ( is_singular() ) wp_enqueue_script( 'comment-reply' ); ?>
-	<?php wp_head(); ?>
+    <?php wp_head(); ?>
 </head>
 
 <body <?php body_class(); ?>>
@@ -38,4 +35,4 @@
 				</div>
 			</div> <!-- #header -->
 		</div> <!-- #header-container -->
-<?php /* Last Revision: Nov 4, 2010, v1.8 */ ?>
+<?php /* Last revised November 28, 2011 v1.9.1 */ ?>
